# kim

./: .gitignore  CLAUDE.md  Plan.MD  README.md  pyproject.toml  steps.md
src/kim/: __init__.py  agents.py  cli.py  models.py
tests/: test_agents.py  test_models.py
